# Agents-in-the-Wild

./: .python-version  LICENSE  README.md  data_generation.py  data_generation_helper.py  log.jsonl  pyproject.toml  requirements.txt
BASEMENT/: agent.py  agent_trace.jsonl  logged_final_answer.py  prompt_old.py  run copy.py  smolagent_adaptor copy.py  smolagent_adaptor old.py  test_agent_build.py  test_models_llama.py
BASEMENT/OLD/: database.py  fewshots copy 2.py  fewshots.py  llm.py  models_llama old.py  models_llama.py  prompt.py  run.py  simple.py
BASEMENT/data/: database.csv
BASEMENT/untitled folder/: Engineering Case Study 1.txt  Engineering Case Study 2.txt  Engineering Case Study 3.txt
data/: database.csv  example_database.csv  test_fast.csv
example/: main.py
example/multi_design/: database (initial).csv  database.csv  main.py  result.csv
example/single_design/: database copy.csv  database.csv  main.py  result.csv
examples/identity_0/: main.py
matvisor/: __init__.py  agent.py  agent_build.py  agent_log.jsonl  database.py  default_system_prompt.py  fewshots copy.py  fewshots.py  log.jsonl  log.py  main.py  models_llama.py  prompt copy.py  prompt.py  result.py  run.py  run_raw.py
matvisor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
matvisor/database/: __init__.py  database_test.csv  load_file.py  material_search.py
matvisor/llm/: __init__.py  download_models.py  llama.py  models.py  smolagent_adaptor.py  smolagent_adaptor_test.jsonl
other/: ch.py
result/: design_results.csv
run/: main.py
tests/: test_agent_build.py
(+46 files in other folders)
