[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["matvisor", "matvisor.*"]

[tool.setuptools.package-data]
matvisor = ["py.typed"]

[project]
name = "matvisor"
version = "0.1.1"
description = "Material selection using agents in the wild."
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Aslan Noorghasemi", email = "aslann@cmu.edu" },
    { name = "Christopher McComb", email = "ccm@cmu.edu" },
]
dependencies = []
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]